[package]
name = "todo"
version = "0.1.0"
authors = ["scrat"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.4.5", default-features = false }
anyhow = "1.0.31"
serde = { version = "1.0.114", features = ["derive"] }
serde_json = "1.0.55"
rust-argon2 = "0.8.2"
uuid = { version = "0.8.1", features = ["v4"] }
rocket_cors = "0.5.2"
postgres = "0.17.3"
reqwest = { version = "0.10.6", features = ["json","blocking"] }
redis = "0.16.0"
rocket_contrib = "0.4.5"
rocket-client-addr = "0.4.3"
